Use a preference for choosing the color palette

--- a/src/calibre/gui2/preferences/look_feel.ui
+++ b/src/calibre/gui2/preferences/look_feel.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1083</width>
-    <height>579</height>
+    <height>594</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -50,13 +50,17 @@
        <string>&amp;Main interface</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout_9">
-       <item row="5" column="0">
-        <widget class="QCheckBox" name="opt_disable_tray_notification">
-         <property name="toolTip">
-          <string>Disable popup notifications when calibre completes jobs such a conversion, sending to device etc. The notifications are sent via the operating system notification facility, if available. Note that on Windows, you have to enable the system tray icon for notifications to work.</string>
-         </property>
+       <item row="7" column="1">
+        <widget class="QCheckBox" name="opt_show_layout_buttons">
          <property name="text">
-          <string>Disable n&amp;otifications on job completion</string>
+          <string>Show &amp;layout buttons in the status bar (needs restart)</string>
+         </property>
+        </widget>
+       </item>
+       <item row="5" column="0">
+        <widget class="QCheckBox" name="opt_systray_icon">
+         <property name="text">
+          <string>Enable s&amp;ystem tray icon (needs restart)</string>
          </property>
         </widget>
        </item>
@@ -67,7 +71,77 @@
          </property>
         </widget>
        </item>
-       <item row="7" column="0">
+       <item row="8" column="1">
+        <widget class="QPushButton" name="change_font_button">
+         <property name="text">
+          <string>Change &amp;font (needs restart)</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1">
+        <widget class="QPushButton" name="icon_theme_button">
+         <property name="text">
+          <string>Change &amp;icon theme</string>
+         </property>
+        </widget>
+       </item>
+       <item row="10" column="0">
+        <widget class="QLabel" name="label_4">
+         <property name="text">
+          <string>E&amp;xtra spacing to add between rows in the book list (can be negative):</string>
+         </property>
+         <property name="buddy">
+          <cstring>opt_book_list_extra_row_spacing</cstring>
+         </property>
+        </widget>
+       </item>
+       <item row="6" column="1">
+        <widget class="QCheckBox" name="opt_show_splash_screen">
+         <property name="text">
+          <string>Show the &amp;splash screen at startup</string>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="1">
+        <widget class="QComboBox" name="opt_language">
+         <property name="sizeAdjustPolicy">
+          <enum>QComboBox::AdjustToMinimumContentsLengthWithIcon</enum>
+         </property>
+         <property name="minimumContentsLength">
+          <number>20</number>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="1">
+        <widget class="QComboBox" name="opt_gui_layout">
+         <property name="maximumSize">
+          <size>
+           <width>250</width>
+           <height>16777215</height>
+          </size>
+         </property>
+         <property name="sizeAdjustPolicy">
+          <enum>QComboBox::AdjustToMinimumContentsLengthWithIcon</enum>
+         </property>
+         <property name="minimumContentsLength">
+          <number>20</number>
+         </property>
+        </widget>
+       </item>
+       <item row="10" column="1">
+        <widget class="QSpinBox" name="opt_book_list_extra_row_spacing">
+         <property name="suffix">
+          <string> px</string>
+         </property>
+         <property name="minimum">
+          <number>-20</number>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="1">
+        <widget class="QComboBox" name="opt_ui_style"/>
+       </item>
+       <item row="8" column="0">
         <layout class="QHBoxLayout" name="horizontalLayout">
          <item>
           <widget class="QLabel" name="label_2">
@@ -88,43 +162,34 @@
          </item>
         </layout>
        </item>
-       <item row="2" column="1">
-        <widget class="QComboBox" name="opt_gui_layout">
-         <property name="maximumSize">
-          <size>
-           <width>250</width>
-           <height>16777215</height>
-          </size>
-         </property>
-         <property name="sizeAdjustPolicy">
-          <enum>QComboBox::AdjustToMinimumContentsLengthWithIcon</enum>
-         </property>
-         <property name="minimumContentsLength">
-          <number>20</number>
-         </property>
-        </widget>
-       </item>
-       <item row="4" column="1">
-        <widget class="QCheckBox" name="opt_disable_animations">
-         <property name="toolTip">
-          <string>Disable all animations. Useful if you have a slow/old computer.</string>
-         </property>
+       <item row="3" column="0">
+        <widget class="QLabel" name="label_17">
          <property name="text">
-          <string>Disable &amp;animations</string>
+          <string>&amp;User interface layout (needs restart):</string>
+         </property>
+         <property name="buddy">
+          <cstring>opt_gui_layout</cstring>
          </property>
         </widget>
        </item>
-       <item row="3" column="1">
-        <widget class="QComboBox" name="opt_language">
-         <property name="sizeAdjustPolicy">
-          <enum>QComboBox::AdjustToMinimumContentsLengthWithIcon</enum>
-         </property>
-         <property name="minimumContentsLength">
-          <number>20</number>
+       <item row="12" column="0" colspan="2">
+        <widget class="QCheckBox" name="opt_booklist_grid">
+         <property name="text">
+          <string>Draw a &amp;grid in the book list</string>
          </property>
         </widget>
        </item>
-       <item row="13" column="0">
+       <item row="0" column="0">
+        <widget class="QLabel" name="label_widget_style">
+         <property name="text">
+          <string>User interface style (&amp;needs restart):</string>
+         </property>
+         <property name="buddy">
+          <cstring>opt_ui_style</cstring>
+         </property>
+        </widget>
+       </item>
+       <item row="14" column="0">
         <spacer name="verticalSpacer_3">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
@@ -137,89 +202,31 @@
          </property>
         </spacer>
        </item>
-       <item row="0" column="0">
-        <widget class="QLabel" name="label_widget_style">
-         <property name="text">
-          <string>User interface style (&amp;needs restart):</string>
+       <item row="5" column="1">
+        <widget class="QCheckBox" name="opt_disable_animations">
+         <property name="toolTip">
+          <string>Disable all animations. Useful if you have a slow/old computer.</string>
          </property>
-         <property name="buddy">
-          <cstring>opt_ui_style</cstring>
+         <property name="text">
+          <string>Disable &amp;animations</string>
          </property>
         </widget>
        </item>
-       <item row="1" column="1">
-        <widget class="QPushButton" name="icon_theme_button">
-         <property name="text">
-          <string>Change &amp;icon theme</string>
-         </property>
-        </widget>
-       </item>
-       <item row="12" column="0">
+       <item row="13" column="0">
         <widget class="QCheckBox" name="opt_dnd_merge">
          <property name="text">
           <string>Allow using &amp;drag and drop to merge books</string>
          </property>
         </widget>
        </item>
-       <item row="5" column="1">
-        <widget class="QCheckBox" name="opt_show_splash_screen">
-         <property name="text">
-          <string>Show the &amp;splash screen at startup</string>
-         </property>
-        </widget>
-       </item>
-       <item row="10" column="0">
+       <item row="11" column="0">
         <widget class="QCheckBox" name="opt_row_numbers_in_book_list">
          <property name="text">
           <string>Show &amp;row numbers in the book list</string>
          </property>
         </widget>
        </item>
-       <item row="11" column="0" colspan="2">
-        <widget class="QCheckBox" name="opt_booklist_grid">
-         <property name="text">
-          <string>Draw a &amp;grid in the book list</string>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="0">
-        <widget class="QLabel" name="label_17">
-         <property name="text">
-          <string>&amp;User interface layout (needs restart):</string>
-         </property>
-         <property name="buddy">
-          <cstring>opt_gui_layout</cstring>
-         </property>
-        </widget>
-       </item>
-       <item row="3" column="0">
-        <widget class="QLabel" name="label_7">
-         <property name="text">
-          <string>Choose &amp;language (needs restart):</string>
-         </property>
-         <property name="buddy">
-          <cstring>opt_language</cstring>
-         </property>
-        </widget>
-       </item>
-       <item row="4" column="0">
-        <widget class="QCheckBox" name="opt_systray_icon">
-         <property name="text">
-          <string>Enable s&amp;ystem tray icon (needs restart)</string>
-         </property>
-        </widget>
-       </item>
-       <item row="9" column="1">
-        <widget class="QSpinBox" name="opt_book_list_extra_row_spacing">
-         <property name="suffix">
-          <string> px</string>
-         </property>
-         <property name="minimum">
-          <number>-20</number>
-         </property>
-        </widget>
-       </item>
-       <item row="8" column="0" colspan="2">
+       <item row="9" column="0" colspan="2">
         <widget class="QGroupBox" name="groupBox_2">
          <property name="title">
           <string>Toolbar</string>
@@ -261,37 +268,47 @@
          </layout>
         </widget>
        </item>
-       <item row="9" column="0">
-        <widget class="QLabel" name="label_4">
+       <item row="6" column="0">
+        <widget class="QCheckBox" name="opt_disable_tray_notification">
+         <property name="toolTip">
+          <string>Disable popup notifications when calibre completes jobs such a conversion, sending to device etc. The notifications are sent via the operating system notification facility, if available. Note that on Windows, you have to enable the system tray icon for notifications to work.</string>
+         </property>
          <property name="text">
-          <string>E&amp;xtra spacing to add between rows in the book list (can be negative):</string>
+          <string>Disable n&amp;otifications on job completion</string>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="0">
+        <widget class="QLabel" name="label_7">
+         <property name="text">
+          <string>Choose &amp;language (needs restart):</string>
          </property>
          <property name="buddy">
-          <cstring>opt_book_list_extra_row_spacing</cstring>
+          <cstring>opt_language</cstring>
          </property>
         </widget>
        </item>
-       <item row="7" column="1">
-        <widget class="QPushButton" name="change_font_button">
-         <property name="text">
-          <string>Change &amp;font (needs restart)</string>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="1">
-        <widget class="QComboBox" name="opt_ui_style"/>
-       </item>
-       <item row="6" column="1">
-        <widget class="QCheckBox" name="opt_show_layout_buttons">
-         <property name="text">
-          <string>Show &amp;layout buttons in the status bar (needs restart)</string>
-         </property>
-        </widget>
-       </item>
-       <item row="6" column="0">
+       <item row="7" column="0">
         <widget class="QCheckBox" name="opt_book_list_tooltips">
          <property name="text">
           <string>Show &amp;tooltips in the book list</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="0">
+        <widget class="QLabel" name="label_20">
+         <property name="text">
+          <string>Color &amp;palette (needs restart):</string>
+         </property>
+         <property name="buddy">
+          <cstring>opt_color_palette</cstring>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="1">
+        <widget class="QComboBox" name="opt_color_palette">
+         <property name="toolTip">
+          <string>The colors to use for the calibre interface. By default the system colors are used. You can change this to force a light or dark color scheme. Note that if this is not set to system default then if the system wide color scheme is changed calibre will not follow it.</string>
          </property>
         </widget>
        </item>
